--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint 'lib/*' 'pages/**/*' ",
+    "format": "prettier --write lib/* pages/* "
   },
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,8 +18,20 @@
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "8.5.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "typescript": "4.5.4",
+    "url-loader": "^4.1.1"
   }
 }
