--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "8.5.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
