--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "mobx": "^6.3.5",
+    "mobx-react": "^7.2.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
